# cpp-practise

./: .gitignore  CMakeLists.txt  README.md
MPI/: Task1.cpp  Task10.cpp  Task11.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task8.cpp  Task9.cpp
OpenMP/: Task1.cpp  Task10.cpp  Task11.cpp  Task12.cpp  Task13v1.cpp  Task13v2.cpp  Task13v3.cpp  Task13v4.cpp  Task13v5.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
solutions/: Task1.cpp  Task2.cpp  Task3.cpp
